# librealsense

common/: device-model.cpp  device-model.h
doc/: installation_osx.md
examples/: CMakeLists.txt
examples/C/infrared/: CMakeLists.txt  readme.md  rs-infrared.c
scripts/: patch-realsense-ubuntu-L4T.sh
src/ds/d400/: d400-device.cpp  d400-factory.cpp  d400-motion.cpp
src/ds/d500/: d500-motion.cpp
src/libusb/: context-libusb.cpp
src/uvc/: uvc-device.cpp
tools/: CMakeLists.txt
unit-tests/live/d400/: test-depth-ae-metadata.py  test-depth-ae-toggle.py
unit-tests/live/frames/: test-pipeline-start-stop.py
unit-tests/rsutils/string/: test-hexarray.cpp
